Overhaul User profile. Fixed spacing bugs.

--- a/frontend/src/pages/Personnel/UserProfileEdit.css
+++ b/frontend/src/pages/Personnel/UserProfileEdit.css
@@ -44,7 +44,7 @@
 }
 
 .cardTable {
-  max-height: 200px;
+  max-height: 400px;
   overflow: hidden;
   overflow-y: scroll;
   display: block;
@@ -53,6 +53,26 @@
 .tdbreak {
   white-space: pre-line;
   word-break: break-word;
+}
+
+.modal-error {
+  border-color: black;
+  border-width: thick;
+  /* background-color: rgba(255, 255, 255, 0); */
+  background-color: #fcc7c3;
+}
+
+.ProfileModal {
+  box-sizing: content-box !important;
+}
+
+.modal-whole {
+  box-sizing: content-box !important;
+  color: rgba(0, 0, 0, 0);
+}
+
+.modal-error-text {
+  color: #7a221b;
 }
 
 /* .card-title {
